Add contactscontroller and factory example

--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Contacts">
+<ion-view view-title="Contacts" ng-cloak>
     <ion-content class="padding">
         <h1>Contacts</h1>
     </ion-content>
