--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Home">
+<ion-view view-title="Home" ng-cloak>
     <ion-content class="padding">
         <h1>Home</h1>
     </ion-content>
