Some better icons

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -28,6 +28,6 @@
         </div>
     </ion-content>
     <ion-footer-bar align-title="center">
-        <h1 class="title positive"><i class="icon ion-key"></i> Lost password?</h1>
+        <h1 class="title positive"><i class="icon ion-ios-information"></i> Lost password?</h1>
     </ion-footer-bar>
 </ion-view>
