--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -4,7 +4,7 @@
             <ion-nav-view name="home-tab"></ion-nav-view>
         </ion-tab>
 
-        <ion-tab title="Contacts" icon="ion-ios-information" href="#/tab/contacts">
+        <ion-tab title="Contacts" icon="ion-person-stalker" href="#/tab/contacts">
             <ion-nav-view name="contacts-tab"></ion-nav-view>
         </ion-tab>
 
