Add contact finding

--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Contacts" ng-cloak>
     <ion-content class="padding">
         <h1>Contacts</h1>
+        <p>{{contacts}}</p>
     </ion-content>
 </ion-view>
