Add user profile test

--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -2,7 +2,7 @@
     <ion-content class="padding">
         <h1>Contacts</h1>
         <div ng-repeat="contact in contacts" class="list">
-            <a class="item item-avatar" href="">
+            <a class="item item-avatar" href ng-click="selectUser(contact)">
                 <img src="{{contact.photo}}">
                 <h2>{{contact.displayName}}</h2>
                 <p>{{contact.number}}</p>
