--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -1,6 +1,13 @@
 <ion-view view-title="Contacts" ng-cloak>
-    <ion-content class="padding">
-        <h1>Contacts</h1>
+    <ion-header-bar class="bar-light bar-subheader has-tabs-top">
+        <div class="list">
+            <label class="item item-input">
+                <i class="icon ion-search placeholder-icon"></i>
+                <input type="text" placeholder="Search">
+            </label>
+        </div>
+    </ion-header-bar>
+    <ion-content class="padding has-header has-subheader">
         <div ng-repeat="contact in contacts" class="list">
             <a class="item item-avatar" href ng-click="selectUser(contact)">
                 <img src="{{contact.photo}}">
