Add dummy user contacts til I fix this bug...

--- a/app/templates/userprofile.html
+++ b/app/templates/userprofile.html
@@ -1,6 +1,6 @@
-<ion-view view-title="Profile" ng-cloak>
+<ion-view view-title="Profile">
     <ion-content class="padding">
         <h1>User profile</h1>
-        {{user.displayName}}}
+        {{user.displayName}}
     </ion-content>
 </ion-view>
