--- a/app/templates/userprofile.html
+++ b/app/templates/userprofile.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Profile">
+<ion-view view-title="Profile" ng-controller="UserProfileCtrl">
     <ion-content class="padding">
         <h1>User profile</h1>
         {{user.displayName}}
