--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Contacts" ng-cloak>
-    <ion-header-bar class="bar-light bar-subheader has-tabs-top">
+    <ion-header-bar class="bar-light bar-subheader has-tabs-top search-bar">
         <div class="list">
             <label class="item item-input">
                 <i class="icon ion-search placeholder-icon"></i>
