--- a/app/templates/userprofile.html
+++ b/app/templates/userprofile.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Profile" ng-controller="UserProfileCtrl">
     <ion-content class="padding">
         <h1>User profile</h1>
-        {{user.displayName}}
+        {{user}}
     </ion-content>
 </ion-view>
