Add action sheet to user contact click

--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -12,7 +12,7 @@
             <a class="item item-avatar" href ng-click="selectUser(contact)">
                 <img src="{{contact.photo}}">
                 <h2>{{contact.displayName}}</h2>
-                <p><i class="icon ion-ios-telephone"></i>  {{contact.number}}</p>
+                <p><i class="icon ion-ios-telephone contact-telephone"></i>  {{contact.number}}</p>
             </a>
         </div>
     </ion-content>
