--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -1,6 +1,8 @@
 <ion-view view-title="Call with {{user.displayName}}" ng-controller="CallCtrl">
     <ion-content class="padding">
-        <h1>Calling!!!</h1>
-        {{user}}
+        <h1>Local</h1>
+        <video id="local-video" autoplay muted ng-src="{{localStreamSrc || trusted}}"></video>
+        <h1>Remote</h1>
+        <video id="remote-video" autoplay muted ng-src="{{remoteStreamSrc || trusted}}"></video>
     </ion-content>
 </ion-view>
