--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -7,8 +7,9 @@
         <ion-tab title="Contacts" icon="ion-person-stalker" href="#/tab/contacts">
             <ion-nav-view name="contacts-tab"></ion-nav-view>
         </ion-tab>
-
-        <ion-tab title="Log out" icon="ion-log-out" href="#/login">
+        <div ng-controller="LogoutCtrl">
+            <ion-tab title="Log out" icon="ion-log-out" ng-click="logout()">
+        </div>
         </ion-tab>
     </ion-tabs>
 </ion-view>
