--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -1,8 +1,8 @@
 <ion-view>
     <ion-tabs class="tabs-icon-top tabs-positive">
-        <ion-tab title="Home" icon="ion-home" href="#/tab/home">
+        <!-- <ion-tab title="Home" icon="ion-home" href="#/tab/home">
             <ion-nav-view name="home-tab"></ion-nav-view>
-        </ion-tab>
+        </ion-tab> -->
 
         <ion-tab title="Contacts" icon="ion-person-stalker" href="#/tab/contacts">
             <ion-nav-view name="contacts-tab"></ion-nav-view>
