--- a/app/scss/call.scss
+++ b/app/scss/call.scss
@@ -22,6 +22,9 @@
   margin-left: 50%;
   transform: translateX(-50%);
 }
+.canvas-container:nth-of-type(2) {
+    margin-top: 46vh;
+}
 
 #local-canvas {
   background-color: rosybrown;
@@ -30,5 +33,4 @@
 
 #remote-canvas {
   background-color: aqua;
-  margin-top: 46vh;
 }
