Show who you're logged in as in contacts, no scrolling in call

--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Contacts" ng-cloak>
+<ion-view view-title="Contacts - {{user.phone}}" ng-cloak>
     <ion-header-bar class="bar-light bar-subheader has-tabs-top search-bar">
         <div class="list">
             <label class="item item-input">
