Add translation support

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -16,8 +16,7 @@
                         <i class="icon ion-locked placeholder-icon"></i>
                         <input type="password" placeholder="Password" required ng-model="user.password" >
                     </label>
-                    <button class="button button-block button-positive icon-right ion-chevron-right" ng-click="login(user)">
-                        Login
+                    <button class="button button-block button-positive icon-right ion-chevron-right" ng-click="login(user)" translate="LOGIN">
                     </button>
                 </form>
             </div>
