--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -1,9 +1,9 @@
-<ion-view view-title="Contacts - {{user.phone}}" ng-cloak>
+<ion-view view-title="{{'CONTACTS' | translate}} - {{user.phone}}" ng-cloak>
     <ion-header-bar class="bar-light bar-subheader has-tabs-top search-bar">
         <div class="list">
             <label class="item item-input">
                 <i class="icon ion-search placeholder-icon"></i>
-                <input type="text" placeholder="Search" ng-model="contactSearch" ng-keyup="searchKeyPress($event.keyCode)">
+                <input type="text" placeholder="{{'SEARCH' | translate}}" ng-model="contactSearch" ng-keyup="searchKeyPress($event.keyCode)">
             </label>
         </div>
     </ion-header-bar>
