--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -4,11 +4,11 @@
             <ion-nav-view name="home-tab"></ion-nav-view>
         </ion-tab> -->
 
-        <ion-tab title="Contacts" icon="ion-person-stalker" href="#/tab/contacts">
+        <ion-tab title="{{'CONTACTS' | translate}}" icon="ion-person-stalker" href="#/tab/contacts">
             <ion-nav-view name="contacts-tab"></ion-nav-view>
         </ion-tab>
         <div ng-controller="LogoutCtrl">
-            <ion-tab title="Log out" icon="ion-log-out" ng-click="logout()">
+            <ion-tab title="{{'LOG_OUT' | translate}}" icon="ion-log-out" ng-click="logout()">
         </div>
         </ion-tab>
     </ion-tabs>
