--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Call with {{user.displayName}}" ng-controller="CallCtrl">
+<ion-view view-title="{{'CALL_HEADER' | translate}}" ng-controller="CallCtrl">
     <ion-content class="padding">
         <video id="local-video" class="stream-video" autoplay muted ng-src="{{localStreamSrc}}"></video>
         <canvas id="local-canvas"></canvas>
