--- a/app/scss/call.scss
+++ b/app/scss/call.scss
@@ -3,8 +3,6 @@
   width: 56vw;
   max-height: 44vh;
   max-width: 56vw;
-  margin-left: 50%;
-  transform: translateX(-50%);
 }
 
 .canvas-container {
@@ -13,10 +11,21 @@
   height: 44vh;
   width: 56vw;
   top: 0;
-  margin-left: 50%;
-  transform: translateX(-50%);
 }
 
 .canvas-container:nth-of-type(2) {
     margin-top: 44vh;
+}
+
+.fullscreen-button {
+    position: absolute;
+    z-index: 100;
+    bottom: 0%;
+    margin-left: 100%;
+    transform: translateX(-50%);
+}
+
+.content-wrapper{
+    margin-left: 50%;
+    transform: translateX(-50%);
 }
