--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -1,9 +1,16 @@
 <ion-view view-title="{{'CALL_HEADER' | translate}}" ng-controller="CallCtrl">
     <ion-content class="padding">
+    <div class="content-wrapper">
         <video id="local-video" class="stream-video" autoplay muted ng-src="{{localStreamSrc}}"></video>
         <canvas id="local-canvas"></canvas>
+        <button class="fullscreen-button" onclick="console.log('asdasd')">Fullscreen</button>
+    </div>
+
+    <div class="content-wrapper">
         <video id="remote-video" class="stream-video" autoplay muted ng-src="{{remoteStreamSrc}}"></video>
         <canvas id="remote-canvas"></canvas>
+        <button class="fullscreen-button" onclick="console.log('hallo')">Fullscreen</button>
+    </div>
     </ion-content>
 </ion-view>
 
