Show who you're calling

--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{'CALL_HEADER' | translate}}" ng-controller="CallCtrl">
+<ion-view view-title="{{'CALL_HEADER' | translate:user}}" ng-controller="CallCtrl">
     <ion-content class="padding">
     <div class="content-wrapper">
         <video id="local-video" class="stream-video" autoplay muted ng-src="{{localStreamSrc}}"></video>
