Somewhat functional fullscreen

--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -1,15 +1,15 @@
 <ion-view view-title="{{'CALL_HEADER' | translate:user}}" ng-controller="CallCtrl">
     <ion-content class="padding">
-    <div class="content-wrapper">
+    <div class="content-wrapper" id="local-wrapper">
         <video id="local-video" class="stream-video" autoplay muted ng-src="{{localStreamSrc}}"></video>
         <canvas id="local-canvas"></canvas>
-        <button class="fullscreen-button" onclick="console.log('asdasd')">Fullscreen</button>
+        <button class="fullscreen-button" ng-click="toggleFullscreen('local')">Fullscreen (local)</button>
     </div>
 
-    <div class="content-wrapper">
+    <div class="content-wrapper" id="remote-wrapper">
         <video id="remote-video" class="stream-video" autoplay muted ng-src="{{remoteStreamSrc}}"></video>
         <canvas id="remote-canvas"></canvas>
-        <button class="fullscreen-button" onclick="console.log('hallo')">Fullscreen</button>
+        <button class="fullscreen-button" ng-click="toggleFullscreen('remote')" >Fullscreen (remote)</button>
     </div>
     </ion-content>
 </ion-view>
