--- a/app/scss/call.scss
+++ b/app/scss/call.scss
@@ -29,3 +29,27 @@
     margin-left: 50%;
     transform: translateX(-50%);
 }
+
+.content-wrapper.fullscreen {
+    height: 100vh;
+    width: 100%;
+
+    .stream-video {
+        height: 100%;
+        width: 100%;
+        max-width:100%;
+        max-height: 100vh;
+    }
+
+    .canvas-container {
+        height: 100%;
+        width:: 100%;
+    }
+
+    .fullscreen-button {
+        bottom: 10vh;
+        margin-left: 0;
+        margin-left: 50%;
+    }
+
+}
