--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -3,13 +3,15 @@
     <div class="content-wrapper" id="local-wrapper">
         <video id="local-video" class="stream-video" autoplay muted ng-src="{{localStreamSrc}}"></video>
         <canvas id="local-canvas"></canvas>
-        <button class="fullscreen-button" ng-click="toggleFullscreen('local')">Fullscreen (local)</button>
+        <i class="icon fullscreen-button" ng-class="determineFullscreenButtonClass()" ng-click="toggleFullscreen('local')"></i>
+        <!-- <button class="fullscreen-button" ng-click="toggleFullscreen('local')">Fullscreen (local)</button> -->
     </div>
 
     <div class="content-wrapper" id="remote-wrapper">
         <video id="remote-video" class="stream-video" autoplay muted ng-src="{{remoteStreamSrc}}"></video>
         <canvas id="remote-canvas"></canvas>
-        <button class="fullscreen-button" ng-click="toggleFullscreen('remote')" >Fullscreen (remote)</button>
+        <i class="icon fullscreen-button" ng-class="determineFullscreenButtonClass()" ng-click="toggleFullscreen('remote')"></i>
+        <!--  <button class="fullscreen-button" ng-click="toggleFullscreen('remote')" >Fullscreen (remote)</button> -->
     </div>
     </ion-content>
 </ion-view>
