Change app name to Soar

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,7 +2,7 @@
     <ion-content class="padding center">
         <div class="row">
             <div class="col text-center">
-                <h1 class="sar-header positive">SAR</h1>
+                <h1 class="sar-header positive">SOAR</h1>
             </div>
         </div>
         <div>
