A bit nicer way of showing current user state

--- a/app/scss/contacts.scss
+++ b/app/scss/contacts.scss
@@ -6,3 +6,12 @@
 .contact-telephone {
   margin-left: 3px;
 }
+
+.contact-number {
+    display: inline;
+}
+
+.contact-state {
+    float: right;
+    display: inline;
+}
