--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -12,7 +12,8 @@
             <a class="item item-avatar" href ng-click="selectUser(contact)">
                 <img src="{{contact.photo}}">
                 <h2>{{contact.displayName}}</h2>
-                <p><i class="icon ion-ios-telephone contact-telephone"></i>  {{contact.number}} - {{contact.currentState}}</p>
+                <p class="contact-number"><i class="icon ion-ios-telephone contact-telephone"></i>  {{contact.number}}</p>
+                <p class="contact-state"> {{'CONTACT_CURRENT_STATE' | translate}}  {{contact.currentState}}</p>
             </a>
         </div>
     </ion-content>
