--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -9,7 +9,7 @@
     </ion-header-bar>
     <ion-content class="padding has-header has-subheader">
         <div ng-repeat="contact in contacts | filter:contactSearch" class="list">
-            <a class="item item-avatar" href ng-click="selectUser(contact)">
+            <a class="item item-avatar" ng-class="contact.currentState" href ng-click="selectUser(contact)">
                 <img src="{{contact.photo}}">
                 <h2>{{contact.displayName}}</h2>
                 <p class="contact-number"><i class="icon ion-ios-telephone contact-telephone"></i>  {{contact.number}}</p>
