--- a/app/scss/contacts.scss
+++ b/app/scss/contacts.scss
@@ -15,3 +15,13 @@
     float: right;
     display: inline;
 }
+
+.list {
+    .offline {
+        img, p, h2 {
+            filter: grayscale(0.3) saturate(1);
+            opacity: 0.5;
+        }
+
+    }
+}
