--- a/app/scss/contacts.scss
+++ b/app/scss/contacts.scss
@@ -16,6 +16,18 @@
     display: inline;
 }
 
+.preloader-on {
+    .list {
+        display: none;
+    }
+}
+
+.preloader-off {
+    .loader-wrapper {
+        display: none;
+    }
+}
+
 .list {
     .offline {
         img, p, h2 {
@@ -24,4 +36,51 @@
         }
 
     }
+}
+
+.loader {
+    // margin: 60px auto;
+    //margin-bottom: 20vh;
+    font-size: 15px;
+    position: relative;
+    text-indent: -9999em;
+    border-top: 1.1em solid rgba(224, 224, 224, 0.5);
+    border-right: 1.1em solid rgba(224, 224, 224, 0.5);
+    border-bottom: 1.1em solid rgba(224, 224, 224, 0.5);
+    border-left: 1.1em solid #387ef5;
+    transform: translateZ(0);
+    animation: load8 1.1s infinite linear;
+}
+.loader,
+.loader:after {
+    border-radius: 50%;
+    width: 10em;
+    height: 10em;
+}
+@-webkit-keyframes load8 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@keyframes load8 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+.loader-wrapper {
+    height: 77vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
