--- a/app/scss/contacts.scss
+++ b/app/scss/contacts.scss
@@ -29,12 +29,19 @@
 }
 
 .list {
-    .offline {
+
+    .contact-wrapper {
+        img, p2, h2 {
+            transition: opacity 0.5s, filter 0.5s;
+            -webkit-transition: opacity 0.5s, filter 0.5s;
+        }
+    }
+
+    .contact-wrapper.offline {
         img, p, h2 {
             filter: grayscale(0.3) saturate(1);
             opacity: 0.5;
         }
-
     }
 }
 
