Add signup button to login

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -16,8 +16,10 @@
                         <i class="icon ion-locked placeholder-icon"></i>
                         <input type="password" placeholder="{{'PASSWORD' | translate}}" required ng-model="user.password" >
                     </label>
-                    <button class="button button-block button-positive icon-right ion-chevron-right" ng-click="login(user)" translate="LOGIN">
-                    </button>
+                    <div class="button-wrapper">
+                        <button class="button button-block button-positive icon-right ion-chevron-right" ng-click="login(user)" translate="LOGIN"></button>
+                        <button class="button button-block button-positive icon-right ion-chevron-right" ng-click="goToSignUp()" translate="REGISTER"></button>
+                    </div>
                 </form>
             </div>
         </div>
