Add ability to skip sending code if you already have one

--- a/app/templates/verify.html
+++ b/app/templates/verify.html
@@ -20,5 +20,8 @@
             </div>
         </div>
     </ion-content>
+    <ion-footer-bar align-title="center" ng-click="goToRegister()">
+       <h1 class="title positive">Already got a code? Tap here.</h1>  
+    </ion-footer-bar>
 </ion-view>
 
