--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,11 +10,11 @@
                 <form>
                     <label class="item item-input">
                         <i class="icon ion-ios-telephone placeholder-icon"></i>
-                        <input type="text" placeholder="{{'MOBILE_NUMBER' | translate}}" required ng-model="user.phoneNumber" >
+                        <input type="text" placeholder="{{'MOBILE_NUMBER' | translate}}" ng-model="user.phoneNumber" >
                     </label>
                     <label class="item item-input">
                         <i class="icon ion-locked placeholder-icon"></i>
-                        <input type="password" placeholder="{{'PASSWORD' | translate}}" required ng-model="user.password" >
+                        <input type="password" placeholder="{{'PASSWORD' | translate}}" ng-model="user.password" >
                     </label>
                     <div class="button-wrapper">
                         <button class="button button-block button-positive icon-right ion-chevron-right" ng-click="login(user)" translate="LOGIN"></button>
