--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -16,7 +16,7 @@
                 <a class="item item-avatar" href ng-click="selectUser(contact)">
                     <img src="{{contact.photo}}">
                     <h2>{{contact.displayName}}</h2>
-                    <p class="contact-number"><i class="icon ion-ios-telephone contact-telephone"></i>  {{contact.phoneNumber}}</p>
+                    <p class="contact-number"><i class="icon ion-ios-telephone contact-telephone"></i> +{{contact.phoneNumber}}</p>
                     <p class="contact-state"> {{'CONTACT_CURRENT_STATE' | translate}}  {{contact.currentState}}</p>
                 </a>
             </div>
