Some password resetting functinality

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -24,7 +24,7 @@
             </div>
         </div>
     </ion-content>
-    <ion-footer-bar align-title="center">
+    <ion-footer-bar align-title="center" ng-click="goToResetPassword()">
         <h1 class="title positive" ><i class="icon ion-ios-information"></i> {{'LOST_PASSWORD' | translate}}</h1>
     </ion-footer-bar>
 </ion-view>
