--- a/app/templates/verify.html
+++ b/app/templates/verify.html
@@ -6,7 +6,7 @@
                     {{'VERIFY_NUMBER_HEADER' | translate}}
                 </div>
                 <div class="item item-text-wrap">
-                    {{'VERIFY_NUMBER_TEXT' | translate}}
+                    {{textTranslation | translate}}
                 </div>
             </div>
             <div class="list list-inset padding-vertical login-form">
