Add API helpers for resetting password

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -23,7 +23,7 @@
                         <i class="icon ion-locked placeholder-icon"></i>
                         <input type="password" placeholder="{{'PASSWORD_AGAIN' | translate}}" ng-model="user.passwordAgain" >
                     </label>
-                    <button class="button button-block button-positive icon-right ion-chevron-right" ng-click="register(user)" translate="{{buttonTranslation}}"></button>
+                    <button class="button button-block button-positive icon-right ion-chevron-right" ng-click="submit(user)" translate="{{buttonTranslation}}"></button>
                 </form>
             </div>
         </div>
