Add active effect to h1s you can tap

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -25,7 +25,7 @@
         </div>
     </ion-content>
     <ion-footer-bar align-title="center" ng-click="goToResetPassword()">
-        <h1 class="title positive" ><i class="icon ion-ios-information"></i> {{'LOST_PASSWORD' | translate}}</h1>
+        <h1 class="title tappable-header positive" ><i class="icon ion-ios-information"></i> {{'LOST_PASSWORD' | translate}}</h1>
     </ion-footer-bar>
 </ion-view>
 
