--- a/app/templates/verify.html
+++ b/app/templates/verify.html
@@ -21,7 +21,7 @@
         </div>
     </ion-content>
     <ion-footer-bar align-title="center" ng-click="goToRegister()">
-        <h1 class="title positive">{{'VERIFY_EXIST' | translate}}</h1>  
+        <h1 class="tappable-header title positive">{{'VERIFY_EXIST' | translate}}</h1>  
     </ion-footer-bar>
 </ion-view>
 
