Change app color

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -1,7 +1,8 @@
+$positive: #34495E !default;
 @import "../vendor/ionic/scss/ionic";
 
 .action-sheet {
-  .icon {
+   .icon {
     position: initial;
   }
 }
