--- a/app/scss/contacts.scss
+++ b/app/scss/contacts.scss
@@ -54,7 +54,7 @@
     border-top: 1.1em solid rgba(224, 224, 224, 0.5);
     border-right: 1.1em solid rgba(224, 224, 224, 0.5);
     border-bottom: 1.1em solid rgba(224, 224, 224, 0.5);
-    border-left: 1.1em solid #387ef5;
+    border-left: 1.1em solid #305e84;
     transform: translateZ(0);
     animation: load8 1.1s infinite linear;
 }
