Add some translations and such to the settings screen

--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -1,7 +1,14 @@
 <ion-view view-title="{{'SETTINGS' | translate}}" ng-controller="SettingsCtrl">
-    <ion-content class="padding">
-        <h1>Settings</h1>
-        {{user}}
+    <ion-content class="padding flex-container ">
+        <div class="full-width-vw">
+            <div class="item item-divider text-center">
+                {{'MISCALLENEOUS' | translate}}
+            </div>
+            <div class="item item-text-wrap">
+                <button class="button button-block button-positive icon-right ion-chevron-right" translate="REFRESH_CONTACTS"></button>
+            </div>
+        </div>
     </ion-content>
+    </ion-footer-bar>
 </ion-view>
 
