More work on improving usability

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,7 +10,7 @@
                 <form>
                     <label class="item item-input">
                         <i class="icon ion-ios-telephone placeholder-icon"></i>
-                        <input type="tel" placeholder="{{'MOBILE_NUMBER' | translate}}" international-phone-number default-country='{{lang}}' ng-model="user.phoneNumber" >
+                        <input type="tel" placeholder="{{'MOBILE_NUMBER' | translate}}" international-phone-number default-country='fi' ng-model="user.phoneNumber" >
                     </label>
                     <label class="item item-input">
                         <i class="icon ion-locked placeholder-icon"></i>
