Disable various buttons while http requests are ongoing

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -17,7 +17,7 @@
                         <input type="password" placeholder="{{'PASSWORD' | translate}}" ng-model="user.password" >
                     </label>
                     <div class="button-wrapper">
-                        <button class="button button-block button-positive icon-right ion-chevron-right" ng-click="login(user)" translate="LOGIN"></button>
+                        <button ng-disabled="isLoginButtonDisabled"  class="button button-block button-positive icon-right ion-chevron-right" ng-click="login(user)" translate="LOGIN"></button>
                         <button class="button button-block button-positive icon-right ion-chevron-right" ng-click="goToSignUp()" translate="REGISTER"></button>
                     </div>
                 </form>
