--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -1,13 +1,13 @@
 <ion-view view-title="{{'CALL_HEADER' | translate:user}}" ng-controller="CallCtrl">
     <ion-content class="padding">
     <div class="content-wrapper" id="local-wrapper">
-        <video id="local-video" class="stream-video" autoplay muted="false" ng-src="{{localStreamSrc}}"></video>
+        <video id="local-video" class="stream-video" autoplay muted="muted" ng-src="{{localStreamSrc}}"></video>
         <canvas id="local-canvas"></canvas>
         <i class="icon fullscreen-button" ng-class="determineFullscreenButtonClass()" ng-click="toggleFullscreen('local')"></i>
     </div>
 
     <div class="content-wrapper" id="remote-wrapper">
-        <video id="remote-video" class="stream-video" autoplay muted="false" ng-src="{{remoteStreamSrc}}"></video>
+        <video id="remote-video" class="stream-video" autoplay ng-src="{{remoteStreamSrc}}"></video>
         <canvas id="remote-canvas"></canvas>
         <i class="icon fullscreen-button" ng-class="determineFullscreenButtonClass()" ng-click="toggleFullscreen('remote')"></i>
     </div>
