--- a/app/scss/call.scss
+++ b/app/scss/call.scss
@@ -16,16 +16,28 @@
 .canvas-container:nth-of-type(2) {
     margin-top: 44vh;
 }
+.call-button {
+    position: relative;
+    display: inline-block;
+    width: 45px; /* 60*/
+    height: 45px; 
+    font-size:40px; 
+    border-radius: 50%;
+    border: 1px solid #ebebeb;
+    background: #305e84;
+    color: #fff;
+    text-align:center;
+}
 
 .fullscreen-button {
     font-size: 3.5em;
     opacity: 0.9;
-    color: lightgray;
     position: absolute;
     z-index: 100;
     bottom: 0%;
     margin-left: 100%;
     transform: translateX(-50%);
+
     &:hover {
         opacity: 1;
     }
