--- a/app/scss/call.scss
+++ b/app/scss/call.scss
@@ -17,25 +17,29 @@
     margin-top: 44vh;
 }
 .call-button {
-    position: relative;
     display: inline-block;
     width: 45px; /* 60*/
     height: 45px; 
     font-size:40px; 
-    border-radius: 50%;
     background: #305e84;
+    border-radius: 50%;
     color: #fff;
     text-align:center;
+    position: absolute;
+    bottom: 6px;
+    z-index: 100;
+    transform: translateX(-50%);
+}
+
+.leave-button {
+    margin-left: 16%;
+    float: left;
 }
 
 .fullscreen-button {
     font-size: 3.5em;
     opacity: 0.9;
-    position: absolute;
-    z-index: 100;
-    bottom: 0%;
     margin-left: 100%;
-    transform: translateX(-50%);
 
     &:hover {
         opacity: 1;
@@ -76,6 +80,10 @@
 
     .canvas-container:nth-of-type(2) {
         margin-top: 0;
+    }
+
+    .leave-button {
+        display: none; 
     }
 
     .fullscreen-button {
