--- a/app/templates/verify.html
+++ b/app/templates/verify.html
@@ -13,9 +13,9 @@
                 <form>
                     <label class="item item-input">
                         <i class="icon ion-ios-telephone placeholder-icon"></i>
-                        <input type="tel" international-phone-number placeholder="{{'MOBILE_NUMBER_EXAMPLE' | translate}}" default-language='fi' ng-model="phone" >
+                        <intlpn national-node="false" default-country="fi" ng-model="phone" placeholder="{{'MOBILE_NUMBER_EXAMPLE' | translate}}"></intlpn>
                     </label>
-                        <button ng-disabled="isVerifyButtonDisabled" class="button button-block button-positive icon-right ion-chevron-right" ng-click="signup(phone)" translate="VERIFY_NUMBER"></button> 
+                        <button ng-disabled="isVerifyButtonDisabled" class="button button-block button-positive icon-right ion-chevron-right" ng-click="signup(phone)" initial-country="auto" translate="VERIFY_NUMBER"></button> 
                 </form>
             </div>
         </div>
