--- a/app/templates/verify.html
+++ b/app/templates/verify.html
@@ -11,7 +11,7 @@
             </div>
             <div class="list list-inset padding-vertical login-form">
                 <form>
-                        <intlpn national-node="false" default-country="fi" ng-model="phone" placeholder="{{'MOBILE_NUMBER_EXAMPLE' | translate}}"></intlpn>
+                    <intlpn national-node="false" default-country="{{defaultCountry}}" ng-model="phone" placeholder="{{'MOBILE_NUMBER_EXAMPLE' | translate}}"></intlpn>
                         <button ng-disabled="isVerifyButtonDisabled" class="button button-block button-positive icon-right ion-chevron-right" ng-click="signup(phone)" initial-country="auto" translate="VERIFY_NUMBER"></button> 
                 </form>
             </div>
